Cleanup in Utils.